# advent_of_code_2016

./: .gitignore  .gitmodules  1.1.py  1.1_input.txt  day10_1.cpp  day10_2.cpp  day11_1.cpp  day11_2.cpp  day12_1.cpp  day12_2.cpp  day13_1.cpp  day13_2.cpp  day14_1.cpp  day14_2.cpp  day15_1.cpp  day16_1.cpp  day16_2.cpp  day17_1.cpp  day18_1.cpp  day18_2.cpp  day19_1.cpp  day19_2.cpp  day1_1.cpp  day1_2.cpp  day20_1.cpp  day20_2.cpp  day21_1.cpp  day21_2.cpp  day22_1.cpp  day22_2.cpp  day23_1.cpp  day23_2.cpp  day24_1.cpp  day24_2.cpp  day25_1.cpp  day2_1.cpp  day2_2.cpp  day3_1.cpp  day3_2.cpp  day4_1.cpp  (+12 more)
FredrikB-Java/: .gitignore  README.txt
HerrEmil-JavaScript/: .eslintrc.js  day-01-common.js  day-01-puzzle-01.js  day-01-puzzle-01.spec.js  day-01-puzzle-02.js  day-01-puzzle-02.spec.js  package.json
Nerarith-c++/: 1a  1a.cpp  1b.cpp  2.in  2a.cpp  2b.cpp  README.md
TechpriestV-Python3/: Dag1.py  Dag2.py  Dag3.py  Dag4.py  Dag5.py  Dag6.py  Dag7.py  Dag8.py
advall-haskell/: d1.hs  d11.hs  d11_old.hs  d13.hs  d15.hs  d17.hs  d18.hs  d2.hs  d20.hs  d21.hs  d3.hs  d4.hs  d5.hs  d6.hs  d7.hs  readme.md  test.hs
advall-python/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py  readme.md
aelg-c/: .gitignore  Makefile  README.md  day-template.c  day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day2.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  hashmap.c  hashmap.h  hashmap_test.c  input-day1.txt  permute.c  permute.h  vector.c  vector.h
anderslindgren-java/: .gitignore
arvidsigvardsson-python/: 12.py
baboons-php/: day1.php  day2.php  day3.php  day4.php  day5.php
baboons-php7/: aoc.php  readme.md
baboons-swift3/: aoc.sh  day1.swift  day2.swift  day3.swift  day4.swift  day5.h  day5.swift  day6.swift  extensions.swift  readme.md
clonest1ck-javascript/: 01dec.js  02dec.js  03dec.js  04dec.js  05dec.js  06dec.js  07dec.js  08dec.js  09dec.js  10dec.js  12dec.js  13dec.js  14dec.js  15dec.js  16dec.js  in01.txt  in02.txt  in08.txt  in09.txt
day1.2/: input.txt  instructions.txt
day10/: input.txt
day10.2/: instructions.txt
day11/: input.txt
day12.2/: instructions.txt
day2/: instructions.txt
day2.2/: day2.2.txt
day3/: instructions.txt
day3.2/: instructions.txt
day4/: instructions.txt
day4.2/: instructions.txt
day5/: instructions.txt
day7.2/: test-input.txt
dlofstrom-brainfuck/: README.md  day1p1.bf  day1p1.py
dlofstrom-python/: .gitignore  README.md
emlun-scala/: README.md  day01a.scala  day01b.scala  day02a.scala  day02b.scala  day03a.scala  day03b.scala  day04a.scala  day04b.scala  day05a.scala  day05b.scala  day06a.scala  day06b.scala  day07a.scala  day07b.scala  day08.scala  day09a.scala  day09b.scala  day10.scala  day11.scala  day12.scala  day13a.scala  day13b.scala  day14.scala  day15.scala  day16.scala  day17.scala  day18.scala  day19a.scala  day19b-with-tostring.scala  day19b.scala  day20.scala  day21.scala  day22.scala  day23.scala  day24.scala  day25.in.notes  day25.scala
eriksvedang-haskell/: .gitignore  LICENSE  eriksvedang-haskell.cabal  stack.yaml
eriksvedang-haskell/src/: Day1.hs  Day1.txt  Day1b.hs  Day2.hs  Day2b.hs  Day3.hs  Day3b.hs  Day4.hs  Day4b.hs  Day5.hs  Day6.hs  Day6.txt  Day6b.hs  Main.hs
estomagordo-python2/: README.md  aoc2016_10a.py  aoc2016_10b.py  aoc2016_11a.py  aoc2016_11b.py  aoc2016_12a.py  aoc2016_12b.py  aoc2016_13a.py  aoc2016_13b.py  aoc2016_14a.py  aoc2016_14b.py  aoc2016_15a.py  aoc2016_15b.py  aoc2016_16a.py  (+36 more)
magthe-haskell/dec03/: Part1.hs  Part2.hs  dec03.cabal
magthe-haskell/dec05/: Part1.hs  Part2.hs  dec05.cabal
magthe-haskell/dec06/: Part1.hs  Part2.hs  dec06.cabal  input
magthe-haskell/dec07/: Part1.hs  Part2.hs  dec07.cabal
magthe-haskell/dec08/: Part1.hs  Part2.hs  dec08.cabal
magthe-haskell/dec11/: Part0.hs  Part1.hs  Part2.hs  README.org  dec11.cabal  input
magthe-haskell/dec13/: Part1.hs  Part2.hs  dec13.cabal
magthe-haskell/dec14/: Part0.hs  Part1.hs  Part2.hs  dec14.cabal
magthe-haskell/dec17/: Part1.hs  Part2.hs  dec17.cabal
magthe-haskell/dec18/: Part1.hs  Part2.hs  dec18.cabal
magthe-haskell/dec19/: Part1.hs  Part2.hs  dec19.cabal
magthe-haskell/dec21/: Part1.hs  Part2.hs  dec21.cabal
magthe-haskell/dec22/: Part1.hs  Part2.hs  dec22.cabal
peterw-cplusplus/: CMakeLists.txt  readme.md
peterw-cplusplus/Day1/: CMakeLists.txt  Day1.cpp  Day1_p2.cpp  input.txt
peterw-cplusplus/Day10/: CMakeLists.txt  Day10.cpp
peterw-cplusplus/Day11/: CMakeLists.txt  Day11.cpp
peterw-cplusplus/Day12/: CMakeLists.txt  Day12.cpp
peterw-cplusplus/Day13/: CMakeLists.txt  Day13.cpp
peterw-cplusplus/Day14/: CMakeLists.txt  Day14.cpp
peterw-cplusplus/Day15/: CMakeLists.txt  Day15.cpp
peterw-cplusplus/Day16/: CMakeLists.txt  Day16.cpp
peterw-cplusplus/Day17/: CMakeLists.txt  Day17.cpp
peterw-cplusplus/Day18/: CMakeLists.txt  Day18.cpp
peterw-cplusplus/Day19/: CMakeLists.txt  Day19.cpp
peterw-cplusplus/Day2/: CMakeLists.txt  Day2.cpp  Day2_p2.cpp
peterw-cplusplus/Day20/: CMakeLists.txt  Day20.cpp
peterw-cplusplus/Day21/: CMakeLists.txt  Day21.cpp  input.txt
peterw-cplusplus/Day22/: CMakeLists.txt  Day22.cpp  input.txt
peterw-cplusplus/Day23/: CMakeLists.txt  Day23.cpp  input.txt
peterw-cplusplus/Day24/: CMakeLists.txt  Day24.cpp
peterw-cplusplus/Day25/: CMakeLists.txt  Day25.cpp
peterw-cplusplus/Day3/: CMakeLists.txt  Day3_p1.cpp  Day3_p2.cpp
peterw-cplusplus/Day4/: CMakeLists.txt  Day4_p1.cpp  Day4_p2.cpp
peterw-cplusplus/Day5/: CMakeLists.txt  Day5.cpp  Day5_p1.cpp
peterw-cplusplus/Day5/md5-1.3.0/: Makefile.in  README.txt  conf.h.in  configure  configure.ac  md5.c  md5_t.c
peterw-cplusplus/Day6/: CMakeLists.txt  Day6.cpp  input.txt
peterw-cplusplus/Day7/: CMakeLists.txt  Day7.cpp
peterw-cplusplus/Day8/: CMakeLists.txt  Day8.cpp
peterw-cplusplus/Day9/: CMakeLists.txt  Day9.cpp
(+1219 files in other folders)
