name: dec03
version: 0.0.1
synopsis: AOC for December 3
homepage: https://github.com/magthe/advent_of_code_2016
license: BSD3
author: Magnus Therning
maintainer: magnus@therning.org
build-type: Simple
cabal-version: >=1.10

executable dec03-part1
  main-is:             Part1.hs
  build-depends:       base >=4.9 && <4.10, mtl >=2.2 && <2.3
  default-language:    Haskell2010

executable dec03-part2
  main-is:             Part2.hs
  build-depends:       base >=4.9 && <4.10, mtl >=2.2 && <2.3
  default-language:    Haskell2010
