name: dec13
version: 0.0.1
synopsis: AOC for December 13
homepage: https://github.com/magthe/advent_of_code_2016
license: BSD3
author: Magnus Therning
maintainer: magnus@therning.org
build-type: Simple
cabal-version: >=1.10

executable dec13-part1
  main-is:             Part1.hs
  build-depends:       base >=4.9 && <4.10, mtl >=2.2 && <2.3, containers
  default-language:    Haskell2010

executable dec13-part2
  main-is:             Part2.hs
  build-depends:       base >=4.9 && <4.10, mtl >=2.2 && <2.3, containers
  default-language:    Haskell2010
